--- a/tributepagecodsoft/index.html
+++ b/tributepagecodsoft/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tribute Page by Umar</title>
+    <title>Tribute Page by Aman</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
